# play-files

./: .gitignore  Cargo.toml  readme.md
examples/: notes.md
examples/projects/400 bpm/: settings
examples/projects/Believe It/: settings
examples/projects/Believe It/patterns/: 0-0-1.track  0-0-2.track  0-0-3.track  0-1-1.track  0-1-2.track  0-1-3.track  0-2-0.track  0-2-2.track  0.pattern
examples/projects/Believe It/samples/: samplesMetadata
examples/projects/The demo/: settings
examples/projects/The demo/patterns/: 0-0-0.track  0-0-1.track  0-0-2.track  0-1-0.track  0-1-1.track  0.pattern  1-0-0.track  1-0-1.track  1.pattern  2-0-0.track  2-0-1.track  2-1-0.track  2-1-1.track  2-6-0.track  2-6-1.track  2-6-2.track  2.pattern  3-0-0.track  3-0-1.track  3.pattern  4-0-0.track  4-0-1.track  4.pattern  5.pattern  6.pattern  7.pattern  8-0-0.track  8-0-1.track  8-0-4.track  8-0-8.track  8.pattern  9.pattern
examples/projects/The demo/samples/: samplesMetadata
examples/projects/blank/: settings
examples/projects/c4 on 1/: settings
examples/projects/c4 on 1/patterns/: 0.pattern
examples/projects/c4 on 1/samples/: samplesMetadata
examples/projects/empty notes on 1+3/: settings
examples/projects/sample st 2 trk 1+2/: settings
examples/projects/sample st 2 trk 1+2/patterns/: 0.pattern
examples/projects/sample st 2 trk 1+2/samples/: samplesMetadata
examples/projects/single empty note/: settings
examples/projects/single empty note/patterns/: 0.pattern
examples/projects/test 1/: settings
src/: lib.rs  reader.rs
tests/: integration_tests.rs
(+5 files in other folders)
