[package]
name = "play-files"
description = "A library for parsing Polyend Play projects into Rust structs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/play-files"
license = "MIT"
keywords = ["music"]

[dependencies]
arr_macro = "0.2.1"
byteorder = "1.4.3"
glob = "0.3.1"
regex = "1.7"

[dev-dependencies]
lazy_static = "1.4"